--- a/src/Pages/styles.module.css
+++ b/src/Pages/styles.module.css
@@ -1,3 +1,13 @@
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .container {
   display: flex;
   flex-direction: column;
